Stylesheet/emote/tag updates 2015-07-20

--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -364,7 +364,7 @@ a[href|="/flutterheart"]  {
     background-position: -1011px -0px 
     }
 /* HOLY SHEET MORE EMOTES */
-a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/buttbutt"], a[href|="/flutterbutt"], a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"], a[href|="/imsorry"]  {
+a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/buttbutt"], a[href|="/flutterbutt"], a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"], a[href|="/imsorryb"]  {
 
     display: block;
     clear: none;
@@ -404,7 +404,7 @@ a[href|="/supershy"], a[href|="/ohhmy"] {
     width: 281px;
     background-position: -1685px -0px 
     }
-a[href|="/imsorry"] {
+a[href|="/imsorryb"] {
     height: 100px !important;
     width: 132px;
     background-position: -528px -100px 
