--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -546,16 +546,24 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-sugarbelle { background-position: -300% -2000%; }
 .flair-nightglider { background-position: 0 -2100%; }
 .flair-partyfavor { background-position: -100% -2100%; }
-.flair-surprise { background-position: 0 -2200%; }
-.flair-snowdrop { background-position: -100% -2200%; }
-.flair-roidrage { background-position: -200% -2200%; }
-.flair-discord { background-position: -300% -2200%; }
-.flair-lightning { background-position: 0 -2300%; }
-.flair-peachbottom { background-position: -100% -2300%; }
-.flair-harshwhinny { background-position: -200% -2300%; }
-.flair-adagiodazzle { background-position: -300% -2300%; }
-.flair-ariablaze { background-position: 0 -2400%; }
-.flair-sonatadusk { background-position: -100% -2400%; }
+.flair-discord { background-position: -200% -2100%; }
+.flair-treehugger { background-position: -300% -2100%; }
+.flair-troubleshoes { background-position: 0 -2200%; }
+.flair-screwloose { background-position: -100% -2200%; }
+.flair-bulkbiceps { background-position: -200% -2200%; }
+.flair-surprise { background-position: 0 -2300%; }
+.flair-snowdrop { background-position: -100% -2300%; }
+.flair-lightning { background-position: -200% -2300%; }
+.flair-peachbottom { background-position: -300% -2300%; }
+.flair-harshwhinny { background-position: 0 -2400%; }
+.flair-adagiodazzle { background-position: -100% -2400%; }
+.flair-ariablaze { background-position: -200% -2400%; }
+.flair-sonatadusk { background-position: -300% -2400%; }
+.flair-raindrops { background-position: 0 -2500%; }
+.flair-babsseed { background-position: -100% -2500%; }
+.flair-moondancer { background-position: -200% -2500%; }
+.flair-fleetfoot { background-position: -300% -2500%; }
+.flair-beautybrass { background-position: 0 -2600%; }
 
 .flair-strudel {
   width: 32px;
