--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -78,14 +78,7 @@ a[href|="/scootaburn"] {
 }
 
 
-a[href|="/teenagebraeburn"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 180px;
-    height: 187px;
-    background-image:url(%%teenagebraeburn%%)
-}
+
 
 a[href|="/braeburnaloo"] {
     display: block;
@@ -1599,6 +1592,15 @@ a[href|="/kawaiishy"] {
  width: 190px;
  height: 240px;
  background-image: url(%%drawing-in-rikose-style1-by-luminaura-d86k9y6%%);
+ 
+}
+a[href|="/treehug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 241px;
+ background-image: url(%%TreeHug%%);
  
 }
 div.titlebox span.word {display:none; }
