--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -134,7 +134,7 @@ a[href|="/rdsitting"],a[href|="/rdhappy"],a[href|="/rdannoyed"],a[href|="/trixie
 a[href|="/fillytgap"],a[href|="/rdhuh"],a[href|="/snails"],a[href|="/twisad"],a[href|="/lyra"],a[href|="/bonbon"],a[href|="/spitfire"],a[href|="/cutealoo"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/sotrue"],a[href|="/wahaha"],a[href|="/sbstare"],a[href|="/berry"],a[href|="/punchdrunk"],a[href|="/huhhuh"],a[href|="/absmile"],a[href|="/dealwithit"],a[href|="/nmm"],a[href|="/blacksnooty"],a[href|="/queenmeanie"],a[href|="/hokeysmokes"],a[href|="/e05"],a[href|="/whooves"],a[href|="/rdsalute"],a[href|="/octavia"],a[href|="/whomeverthisis"],a[href|="/colgate"],a[href|="/cheerilee"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/abhuh"],a[href|="/lily"],a[href|="/thehorror"],a[href|="/twiponder"],a[href|="/spikewtf"],a[href|="/awwyeah"],a[href|="/gilda"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/macintears"],a[href|="/bigmactears"],a[href|="/lunamad"],a[href|="/discordsad"],a[href|="/maud"],a[href|="/pinkiepout"],a[href|="/rfillytgap"],a[href|="/rrdhuh"],a[href|="/rsnails"],a[href|="/rtwisad"],a[href|="/rlyra"],a[href|="/rbonbon"],a[href|="/rspitfire"],a[href|="/rcutealoo"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/rsotrue"],a[href|="/rwahaha"],a[href|="/rsbstare"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/rhuhhuh"],a[href|="/rabsmile"],a[href|="/rdealwithit"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/rwhooves"],a[href|="/rrdsalute"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/rcolgate"],a[href|="/rcheerilee"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/rabhuh"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/rtwiponder"],a[href|="/rspikewtf"],a[href|="/rawwyeah"],a[href|="/rgilda"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/rlunamad"],a[href|="/rdiscordsad"],a[href|="/rmaud"],a[href|="/rpinkiepout"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/sunsetsneaky"],a[href|="/sneakysunset"],a[href|="/sneakyss"],a[href|="/scootablue"],a[href|="/orphan"],a[href|="/noparents"],a[href|="/spikehappy"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetsneaky"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rscootablue"],a[href|="/rorphan"],a[href|="/rnoparents"],a[href|="/rspikehappy"]
 {display:block;clear:none;float:left;width:70px;height:70px;cursor:default;background-image:url(%%emotes%%)!important}
 
-a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"]
+a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/scootaeww"],a[href|="/rscootaeww"],a[href|="/discordgrump"],a[href|="/rdiscordgrump"],a[href|="/troubleshoes"],a[href|="/rtroubleshoes"],a[href|="/rdsnrk"],a[href|="/rrdsnrk"],a[href|="/thcalm"],a[href|="/rthcalm"],a[href|="/thc"],a[href|="/rthc"],a[href|="/ooh"],a[href|="/rooh"],a[href|="/pinkieooh"],a[href|="/rpinkieooh"]
 {display:block;clear:none;float:left;width:70px;height:70px;cursor:default;background-image:url(%%fmotes%%)!important}
 
 a[href|="/smooze"],a[href|="/rsmooze"]
@@ -203,37 +203,43 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-nightglider
 {background-position:0 -2100%}
 
-.flair-surprise
+.flair-troubleshoes
 {background-position:0 -2200%}
 
-.flair-lightning
+.flair-surprise
 {background-position:0 -2300%}
 
-.flair-ariablaze
+.flair-harshwhinny
 {background-position:0 -2400%}
+
+.flair-raindrops
+{background-position:0 -2500%}
+
+.flair-beautybrass
+{background-position:0 -2600%}
 
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/starlightrage"],a[href|="/rstarlightrage"],.flair-twilight
 {background-position:-100% 0}
 
-a[href|="/celestiamad"],a[href|="/rcelestiamad"],a[href|="/ajsly"],a[href|="/rajsly"],a[href|="/twismile"],a[href|="/rtwismile"],a[href|="/bonbon"],a[href|="/rbonbon"],.flair-rarity
+a[href|="/celestiamad"],a[href|="/rcelestiamad"],a[href|="/ajsly"],a[href|="/rajsly"],a[href|="/twismile"],a[href|="/rtwismile"],a[href|="/bonbon"],a[href|="/rbonbon"],a[href|="/bulkbiceps"],a[href|="/rbulkbiceps"],a[href|="/yeah"],a[href|="/ryeah"],.flair-rarity
 {background-position:-100% -100%}
 
-a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rraritydress"],a[href|="/party"],a[href|="/rparty"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],.flair-celestia
+a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rraritydress"],a[href|="/party"],a[href|="/rparty"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/scootaeww"],a[href|="/rscootaeww"],.flair-celestia
 {background-position:-100% -200%}
 
-a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/gross"],a[href|="/rgross"],a[href|="/sbstare"],a[href|="/rsbstare"],.flair-bonbon
+a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/gross"],a[href|="/rgross"],a[href|="/sbstare"],a[href|="/rsbstare"],a[href|="/discordgrump"],a[href|="/rdiscordgrump"],.flair-bonbon
 {background-position:-100% -300%}
 
-a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/flutteryay"],a[href|="/rflutteryay"],a[href|="/hmmm"],a[href|="/rhmmm"],a[href|="/absmile"],a[href|="/rabsmile"],.flair-colgate
+a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/flutteryay"],a[href|="/rflutteryay"],a[href|="/hmmm"],a[href|="/rhmmm"],a[href|="/absmile"],a[href|="/rabsmile"],a[href|="/troubleshoes"],a[href|="/rtroubleshoes"],.flair-colgate
 {background-position:-100% -400%}
 
-a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/raritywut"],a[href|="/rraritywut"],a[href|="/fabulous"],a[href|="/rfabulous"],a[href|="/whooves"],a[href|="/rwhooves"],.flair-zecora
+a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/raritywut"],a[href|="/rraritywut"],a[href|="/fabulous"],a[href|="/rfabulous"],a[href|="/whooves"],a[href|="/rwhooves"],a[href|="/rdsnrk"],a[href|="/rrdsnrk"],.flair-zecora
 {background-position:-100% -500%}
 
-a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/flutterwink"],a[href|="/rflutterwink"],a[href|="/lunasad"],a[href|="/rlunasad"],a[href|="/colgate"],a[href|="/rcolgate"],.flair-redheart
+a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/flutterwink"],a[href|="/rflutterwink"],a[href|="/lunasad"],a[href|="/rlunasad"],a[href|="/colgate"],a[href|="/rcolgate"],a[href|="/thcalm"],a[href|="/rthcalm"],a[href|="/thc"],a[href|="/rthc"],.flair-redheart
 {background-position:-100% -600%}
 
-a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/twisquint"],a[href|="/rtwisquint"],a[href|="/loveme"],a[href|="/rloveme"],a[href|="/abhuh"],a[href|="/rabhuh"],.flair-shadowbolts
+a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/twisquint"],a[href|="/rtwisquint"],a[href|="/loveme"],a[href|="/rloveme"],a[href|="/abhuh"],a[href|="/rabhuh"],a[href|="/ooh"],a[href|="/rooh"],a[href|="/pinkieooh"],a[href|="/rpinkieooh"],.flair-shadowbolts
 {background-position:-100% -700%}
 
 a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/manspike"],a[href|="/rmanspike"],a[href|="/celestia"],a[href|="/rcelestia"],a[href|="/spikewtf"],a[href|="/rspikewtf"],.flair-davenport
@@ -278,14 +284,17 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
 .flair-partyfavor
 {background-position:-100% -2100%}
 
-.flair-snowdrop
+.flair-screwloose
 {background-position:-100% -2200%}
 
-.flair-peachbottom
+.flair-snowdrop
 {background-position:-100% -2300%}
 
-.flair-sonatadusk
+.flair-adagiodazzle
 {background-position:-100% -2400%}
+
+.flair-babsseed
+{background-position:-100% -2500%}
 
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],.flair-fluttershy
 {background-position:-200% 0}
@@ -350,11 +359,20 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-doublediamond
 {background-position:-200% -2000%}
 
-.flair-roidrage
+.flair-discord
+{background-position:-200% -2100%}
+
+.flair-bulkbiceps
 {background-position:-200% -2200%}
 
-.flair-harshwhinny
+.flair-lightning
 {background-position:-200% -2300%}
+
+.flair-ariablaze
+{background-position:-200% -2400%}
+
+.flair-moondancer
+{background-position:-200% -2500%}
 
 a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack
 {background-position:-300% 0}
@@ -371,7 +389,7 @@ a[href|="/scootaderp"],a[href|="/didneyworl"],a[href|="/DIDNEYWORL"],a[href|="/r
 a[href|="/pinkieawe"],a[href|="/ppawe"],a[href|="/areyouawizard"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/spikepushy"],a[href|="/rspikepushy"],a[href|="/whattheflut"],a[href|="/rwhattheflut"],a[href|="/pinkiepout"],a[href|="/rpinkiepout"],.flair-pokey
 {background-position:-300% -400%}
 
-a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/raritywhy"],a[href|="/rraritywhy"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],.flair-carrottop
+a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/raritywhy"],a[href|="/rraritywhy"],a[href|="/cadencesmile"],a[href|="/rcadencesmile"],a[href|="/cadancesmile"],a[href|="/rcadancesmile"],a[href|="/twisecret"],a[href|="/twiaside"],a[href|="/smackafilly"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],.flair-carrottop
 {background-position:-300% -500%}
 
 a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|="/rsoawesome"],a[href|="/shiningpride"],a[href|="/rshiningpride"],a[href|="/sunsetshimmer"],a[href|="/ssshimmer"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],.flair-braeburn
@@ -419,11 +437,17 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 .flair-sugarbelle
 {background-position:-300% -2000%}
 
-.flair-discord
-{background-position:-300% -2200%}
+.flair-treehugger
+{background-position:-300% -2100%}
 
-.flair-adagiodazzle
+.flair-peachbottom
 {background-position:-300% -2300%}
+
+.flair-sonatadusk
+{background-position:-300% -2400%}
+
+.flair-fleetfoot
+{background-position:-300% -2500%}
 
 /*---------------- END COPY ----------------*/
 
