--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -33,6 +33,8 @@ background: #5f99cf
 
 /*Background*/
 body{background: #ffffff url(%%twilightbackground%%) no-repeat fixed center center}
+body.res-nightmode {background-image: url(%%twilightbackground%%) !important;}
+body.res-nightmode div.content {background-color: transparent;}
 
 /*Approval Check-mark*/
 .approval-checkmark {background:url(%%checkmark%%); padding: 7.5px; height: 0 !important;}
@@ -318,35 +320,35 @@ a[href|="/re09"],a[href|="/rgilda"],a[href|="/re19"],a[href|="/rdiscentia"],a[hr
 
 /*f table*/
 a[href|="/f00"],a[href|="/pinkiesad"],a[href|="/f10"],a[href|="/starlightrage"],
-a[href|="/f01"],a[href|="/diamondtiara"],a[href|="/f11"],a[href|="/bulkbiceps"],a[href|="/rf11"],a[href|="/rbulkbiceps"],
-a[href|="/f02"],a[href|="/sombra"],
-a[href|="/f03"],a[href|="/sbshocked"],
-a[href|="/f04"],a[href|="/guard"],
-a[href|="/f05"],a[href|="/abstern"],
-a[href|="/f06"],a[href|="/apathia"],
-a[href|="/f07"],a[href|="/ajcry"],
+a[href|="/f01"],a[href|="/diamondtiara"],a[href|="/f11"],a[href|="/bulkbiceps"],
+a[href|="/f02"],a[href|="/sombra"],a[href|="/f12"],a[href|="/scootaeww"],
+a[href|="/f03"],a[href|="/sbshocked"],a[href|="/f13"],a[href|="/discordgrump"],
+a[href|="/f04"],a[href|="/guard"],a[href|="/f14"],a[href|="/troubleshoes"],
+a[href|="/f05"],a[href|="/abstern"],a[href|="/f15"],a[href|="/rdsnrk"],
+a[href|="/f06"],a[href|="/apathia"],a[href|="/f16"],a[href|="/thcalm"],
+a[href|="/f07"],a[href|="/ajcry"],a[href|="/f17"],a[href|="/pinkieooh"],
 a[href|="/f08"],a[href|="/rarityeww"],
 a[href|="/f09"],a[href|="/flutterkay"],
 a[href|="/rf00"],a[href|="/rpinkiesad"],a[href|="/rf10"],a[href|="/rstarlightrage"],
 a[href|="/rf01"],a[href|="/rdiamondtiara"],a[href|="/rf11"],a[href|="/rbulkbiceps"],
-a[href|="/rf02"],a[href|="/rsombra"],
-a[href|="/rf03"],a[href|="/rsbshocked"]
-a[href|="/rf04"],a[href|="/rguard"],
-a[href|="/rf05"],a[href|="/rabstern"],
-a[href|="/rf06"],a[href|="/rapathia"],
-a[href|="/rf07"],a[href|="/rajcry"],
+a[href|="/rf02"],a[href|="/rsombra"],a[href|="/rf12"],a[href|="/rscootaeww"],
+a[href|="/rf03"],a[href|="/rsbshocked"],a[href|="/rf13"],a[href|="/rdiscordgrump"],
+a[href|="/rf04"],a[href|="/rguard"],a[href|="/rf14"],a[href|="/rtroubleshoes"],
+a[href|="/rf05"],a[href|="/rabstern"],a[href|="/rf15"],a[href|="/rrdsnrk"],
+a[href|="/rf06"],a[href|="/rapathia"],a[href|="/rf16"],a[href|="/rthcalm"],
+a[href|="/rf07"],a[href|="/rajcry"],a[href|="/rf17"],a[href|="/rpinkieooh"],
 a[href|="/rf08"],a[href|="/rrarityeww"],
 a[href|="/rf09"],a[href|="/rflutterkay"]
 {display:block; clear:none; float:left; width:70px; height:70px; background-image:url(%%fmotes%%)!important}
 
 a[href|="/rf00"],a[href|="/rpinkiesad"],a[href|="/rf10"],a[href|="/rstarlightrage"],
 a[href|="/rf01"],a[href|="/rdiamondtiara"],a[href|="/rf11"],a[href|="/rbulkbiceps"],
-a[href|="/rf02"],a[href|="/rsombra"],
-a[href|="/rf03"],a[href|="/rsbshocked"],
-a[href|="/rf04"],a[href|="/rguard"],
-a[href|="/rf05"],a[href|="/rabstern"],
-a[href|="/rf06"],a[href|="/rapathia"],
-a[href|="/rf07"],a[href|="/rajcry"],
+a[href|="/rf02"],a[href|="/rsombra"],a[href|="/rf12"],a[href|="/rscootaeww"],
+a[href|="/rf03"],a[href|="/rsbshocked"],a[href|="/rf13"],a[href|="/rdiscordgrump"],
+a[href|="/rf04"],a[href|="/rguard"],a[href|="/rf14"],a[href|="/rtroubleshoes"],
+a[href|="/rf05"],a[href|="/rabstern"],a[href|="/rf15"],a[href|="/rrdsnrk"],
+a[href|="/rf06"],a[href|="/rapathia"],a[href|="/rf16"],a[href|="/rthcalm"],
+a[href|="/rf07"],a[href|="/rajcry"],a[href|="/rf17"],a[href|="/rpinkieooh"],
 a[href|="/rf08"],a[href|="/rrarityeww"],
 a[href|="/rf09"],a[href|="/rflutterkay"]
 {-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1);}
@@ -409,7 +411,7 @@ a[href|="/a31"],a[href|="/spikemeh"],a[href|="/ra31"],a[href|="/rspikemeh"],a[hr
 a[href|="/a02"],a[href|="/lunateehee"],a[href|="/ra02"],a[href|="/rlunateehee"],a[href|="/b02"],a[href|="/fluttersrs"],a[href|="/rb02"],a[href|="/rfluttersrs"],a[href|="/c02"],a[href|="/ohhi"],a[href|="/rc02"],a[href|="/rohhi"],a[href|="/e02"],a[href|="/cutealoo"],a[href|="/re02"],a[href|="/rcutealoo"],a[href|="/f02"],a[href|="/sombra"],a[href|="/rf02"],a[href|="/rsombra"],a[href|="/pl02"],a[href|="/ohnoes"],a[href|="/rpl02"],a[href|="/rohnoes"],.side .md table tr:nth-of-type(5) td:nth-of-type(2):after
 {background-position: 0 -200%}
 
-a[href|="/a12"],a[href|="/lunawait"],a[href|="/ra12"],a[href|="/rlunawait"],a[href|="/b12"],a[href|="/raritydress"],a[href|="/rb12"],a[href|="/rraritydress"],a[href|="/c12"],a[href|="/party"],a[href|="/rc12"],a[href|="/rparty"],a[href|="/e12"],a[href|="/happyluna"],a[href|="/re12"],a[href|="/rhappyluna"],.side .md table tr:nth-of-type(5) td:nth-of-type(3):after
+a[href|="/a12"],a[href|="/lunawait"],a[href|="/ra12"],a[href|="/rlunawait"],a[href|="/b12"],a[href|="/raritydress"],a[href|="/rb12"],a[href|="/rraritydress"],a[href|="/c12"],a[href|="/party"],a[href|="/rc12"],a[href|="/rparty"],a[href|="/e12"],a[href|="/happyluna"],a[href|="/re12"],a[href|="/rhappyluna"],a[href|="/f12"],a[href|="/scootaeww"],a[href|="/rf12"],a[href|="/rscootaeww"],.side .md table tr:nth-of-type(5) td:nth-of-type(3):after
 {background-position: -100% -200%}
 
 a[href|="/a22"],a[href|="/paperbagderpy"],a[href|="/ra22"],a[href|="/rpaperbagderpy"],a[href|="/b22"],a[href|="/takealetter"],a[href|="/rb22"],a[href|="/rtakealetter"],a[href|="/c22"],a[href|="/hahaha"],a[href|="/rc22"],a[href|="/rhahaha"],a[href|="/e22"],a[href|="/sotrue"],a[href|="/re22"],a[href|="/rsotrue"],.side .md table tr:nth-of-type(5) td:nth-of-type(4):after
@@ -421,7 +423,7 @@ a[href|="/a32"],a[href|="/abmeh"],a[href|="/ra32"],a[href|="/rabmeh"],a[href|="/
 a[href|="/a03"],a[href|="/ajhappy"],a[href|="/ra03"],a[href|="/rajhappy"],a[href|="/b03"],a[href|="/ppshrug"],a[href|="/rb03"],a[href|="/rppshrug"],a[href|="/c03"],a[href|="/flutterblush"],a[href|="/rc03"],a[href|="/rflutterblush"],a[href|="/e03"],a[href|="/wahaha"],a[href|="/re03"],a[href|="/rwahaha"],a[href|="/f03"],a[href|="/sbshocked"],a[href|="/rf03"],a[href|="/rsbshocked"],.side .md table tr:nth-of-type(7) td:nth-of-type(2):after
 {background-position: 0 -300%}
 
-a[href|="/a13"],a[href|="/ppfear"],a[href|="/ra13"],a[href|="/rppfear"],a[href|="/b13"],a[href|="/spikenervous"],a[href|="/rb13"],a[href|="/rspikenervous"],a[href|="/c13"],a[href|="/gross"],a[href|="/rc13"],a[href|="/rgross"],a[href|="/e13"],a[href|="/sbstare"],a[href|="/re13"],a[href|="/rsbstare"],.side .md table tr:nth-of-type(7) td:nth-of-type(3):after
+a[href|="/a13"],a[href|="/ppfear"],a[href|="/ra13"],a[href|="/rppfear"],a[href|="/b13"],a[href|="/spikenervous"],a[href|="/rb13"],a[href|="/rspikenervous"],a[href|="/c13"],a[href|="/gross"],a[href|="/rc13"],a[href|="/rgross"],a[href|="/e13"],a[href|="/sbstare"],a[href|="/re13"],a[href|="/f13"],a[href|="/discordgrump"],a[href|="/rf13"],a[href|="/rdiscordgrump"],a[href|="/rsbstare"],.side .md table tr:nth-of-type(7) td:nth-of-type(3):after
 {background-position: -100% -300%}
 
 a[href|="/a23"],a[href|="/twibeam"],a[href|="/ra23"],a[href|="/rtwibeam"],a[href|="/b23"],a[href|="/noooo"],a[href|="/rb23"],a[href|="/rnoooo"],a[href|="/c23"],a[href|="/derpyhappy"],a[href|="/rc23"],a[href|="/rderpyhappy"],a[href|="/e23"],a[href|="/berry"],a[href|="/re23"],a[href|="/rberry"],.side .md table tr:nth-of-type(7) td:nth-of-type(4):after
@@ -433,7 +435,7 @@ a[href|="/a33"],a[href|="/scootaderp"],a[href|="/ra33"],a[href|="/rscootaderp"],
 a[href|="/a04"],a[href|="/raritydaww"],a[href|="/ra04"],a[href|="/rraritydaww"],a[href|="/b04"],a[href|="/fluttershh"],a[href|="/rb04"],a[href|="/rfluttershh"],a[href|="/c04"],a[href|="/ajfrown"],a[href|="/rc04"],a[href|="/rajfrown"],a[href|="/e04"],a[href|="/huhhuh"],a[href|="/re04"],a[href|="/rhuhhuh"],a[href|="/f04"],a[href|="/guard"],a[href|="/rf04"],a[href|="/rguard"],.side .md table tr:nth-of-type(9) td:nth-of-type(2):after
 {background-position: 0 -400%}
 
-a[href|="/a14"],a[href|="/scootacheer"],a[href|="/ra14"],a[href|="/rscootacheer"],a[href|="/b14"],a[href|="/flutteryay"],a[href|="/rb14"],a[href|="/rflutteryay"],a[href|="/c14"],a[href|="/hmmm"],a[href|="/rc14"],a[href|="/rhmmm"],a[href|="/e14"],a[href|="/absmile"],a[href|="/re14"],a[href|="/rabsmile"],.side .md table tr:nth-of-type(9) td:nth-of-type(3):after
+a[href|="/a14"],a[href|="/scootacheer"],a[href|="/ra14"],a[href|="/rscootacheer"],a[href|="/b14"],a[href|="/flutteryay"],a[href|="/rb14"],a[href|="/rflutteryay"],a[href|="/c14"],a[href|="/hmmm"],a[href|="/rc14"],a[href|="/rhmmm"],a[href|="/e14"],a[href|="/absmile"],a[href|="/re14"],a[href|="/rabsmile"],a[href|="/rf14"],a[href|="/rtroubleshoes"],a[href|="/f14"],a[href|="/troubleshoes"],.side .md table tr:nth-of-type(9) td:nth-of-type(3):after
 {background-position: -100% -400%}
 
 a[href|="/a24"],a[href|="/swagintosh"],a[href|="/ra24"],a[href|="/rswagintosh"],a[href|="/b24"],a[href|="/squintyjack"],a[href|="/rb24"],a[href|="/rsquintyjack"],a[href|="/c24"],a[href|="/joy"],a[href|="/rc24"],a[href|="/rjoy"],a[href|="/e24"],a[href|="/dealwithit"],a[href|="/re24"],a[href|="/rdealwithit"],.side .md table tr:nth-of-type(9) td:nth-of-type(4):after
@@ -445,7 +447,7 @@ a[href|="/a34"],a[href|="/pinkieawe"],a[href|="/ra34"],a[href|="/rpinkieawe"],a[
 a[href|="/a05"],a[href|="/ajsup"],a[href|="/ra05"],a[href|="/rajsup"],a[href|="/b05"],a[href|="/ajugh"],a[href|="/rb05"],a[href|="/rajugh"],a[href|="/c05"],a[href|="/raritysad"],a[href|="/rc05"],a[href|="/rraritysad"],a[href|="/e05"],a[href|="/nmm"],a[href|="/re05"],a[href|="/rnmm"],a[href|="/f05"],a[href|="/abstern"],a[href|="/rf05"],a[href|="/rabstern"],.side .md table tr:nth-of-type(11) td:nth-of-type(2):after
 {background-position: 0 -500%}
 
-a[href|="/a15"],a[href|="/flutterwhoa"],a[href|="/ra15"],a[href|="/rflutterwhoa"],a[href|="/b15"],a[href|="/raritywut"],a[href|="/rb15"],a[href|="/rraritywut"],a[href|="/c15"],a[href|="/fabulous"],a[href|="/rc15"],a[href|="/rfabulous"],a[href|="/e15"],a[href|="/whooves"],a[href|="/re15"],a[href|="/rwhooves"],.side .md table tr:nth-of-type(11) td:nth-of-type(3):after
+a[href|="/a15"],a[href|="/flutterwhoa"],a[href|="/ra15"],a[href|="/rflutterwhoa"],a[href|="/b15"],a[href|="/raritywut"],a[href|="/rb15"],a[href|="/rraritywut"],a[href|="/c15"],a[href|="/fabulous"],a[href|="/rc15"],a[href|="/rfabulous"],a[href|="/e15"],a[href|="/whooves"],a[href|="/re15"],a[href|="/rwhooves"],a[href|="/f15"],a[href|="/rdsnrk"],a[href|="/rf15"],a[href|="/rrdsnrk"],.side .md table tr:nth-of-type(11) td:nth-of-type(3):after
 {background-position: -100% -500%}
 
 a[href|="/a25"],a[href|="/rdcry"],a[href|="/ra25"],a[href|="/rrdcry"],a[href|="/b25"],a[href|="/dumbfabric"],a[href|="/rb25"],a[href|="/rdumbfabric"],a[href|="/c25"],a[href|="/derp"],a[href|="/rc25"],a[href|="/rderp"],a[href|="/e25"],a[href|="/rdsalute"],a[href|="/re25"],a[href|="/rrdsalute"],.side .md table tr:nth-of-type(11) td:nth-of-type(4):after
@@ -457,7 +459,7 @@ a[href|="/a35"],a[href|="/silverspoon"],a[href|="/ra35"],a[href|="/rsilverspoon"
 a[href|="/a06"],a[href|="/ohcomeon"],a[href|="/ra06"],a[href|="/rohcomeon"],a[href|="/b06"],a[href|="/trixiesmug"],a[href|="/rb06"],a[href|="/rtrixiesmug"],a[href|="/c06"],a[href|="/louder"],a[href|="/rc06"],a[href|="/rlouder"],a[href|="/e06"],a[href|="/octavia"],a[href|="/re06"],a[href|="/roctavia"],a[href|="/f06"],a[href|="/apathia"],a[href|="/rf06"],a[href|="/rapathia"],.side .md table tr:nth-of-type(13) td:nth-of-type(2):after
 {background-position: 0 -600%}
 
-a[href|="/a16"],a[href|="/ppcute"],a[href|="/ra16"],a[href|="/rppcute"],a[href|="/b16"],a[href|="/flutterwink"],a[href|="/rb16"],a[href|="/rflutterwink"],a[href|="/c16"],a[href|="/lunasad"],a[href|="/rc16"],a[href|="/rlunasad"],a[href|="/e16"],a[href|="/minuette"],a[href|="/re16"],a[href|="/rminuette"],.side .md table tr:nth-of-type(13) td:nth-of-type(3):after
+a[href|="/a16"],a[href|="/ppcute"],a[href|="/ra16"],a[href|="/rppcute"],a[href|="/b16"],a[href|="/flutterwink"],a[href|="/rb16"],a[href|="/rflutterwink"],a[href|="/c16"],a[href|="/lunasad"],a[href|="/rc16"],a[href|="/rlunasad"],a[href|="/e16"],a[href|="/minuette"],a[href|="/re16"],a[href|="/rminuette"],a[href|="/f16"],a[href|="/thcalm"],a[href|="/rf16"],a[href|="/rthcalm"],.side .md table tr:nth-of-type(13) td:nth-of-type(3):after
 {background-position: -100% -600%}
 
 a[href|="/a26"],a[href|="/abbored"],a[href|="/ra26"],a[href|="/rabbored"],a[href|="/b26"],a[href|="/rarityannoyed"],a[href|="/rb26"],a[href|="/rrarityannoyed"],a[href|="/c26"],a[href|="/derpyshock"],a[href|="/rc26"],a[href|="/rderpyshock"],a[href|="/e26"],a[href|="/cheerilee"],a[href|="/re26"],a[href|="/rcheerilee"],.side .md table tr:nth-of-type(13) td:nth-of-type(4):after
@@ -469,7 +471,7 @@ a[href|="/a36"],a[href|="/rarityreally"],a[href|="/ra36"],a[href|="/rrarityreall
 a[href|="/a07"],a[href|="/raritypaper"],a[href|="/ra07"],a[href|="/rraritypaper"],a[href|="/b07"],a[href|="/ajwut"],a[href|="/rb07"],a[href|="/rajwut"],a[href|="/c07"],a[href|="/pinkamina"],a[href|="/rc07"],a[href|="/rpinkamina"],a[href|="/e07"],a[href|="/ajconfused"],a[href|="/re07"],a[href|="/rajconfused"],a[href|="/f07"],a[href|="/ajcry"],a[href|="/rf07"],a[href|="/rajcry"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after
 {background-position: 0 -700%}
 
-a[href|="/a17"],a[href|="/sbbook"],a[href|="/ra17"],a[href|="/rsbbook"],a[href|="/b17"],a[href|="/twisquint"],a[href|="/rb17"],a[href|="/rtwisquint"],a[href|="/c17"],a[href|="/loveme"],a[href|="/rc17"],a[href|="/rloveme"],a[href|="/e17"],a[href|="/abhuh"],a[href|="/re17"],a[href|="/rabhuh"],.side .md table tr:nth-of-type(15) td:nth-of-type(3):after
+a[href|="/a17"],a[href|="/sbbook"],a[href|="/ra17"],a[href|="/rsbbook"],a[href|="/b17"],a[href|="/twisquint"],a[href|="/rb17"],a[href|="/rtwisquint"],a[href|="/c17"],a[href|="/loveme"],a[href|="/rc17"],a[href|="/rloveme"],a[href|="/e17"],a[href|="/abhuh"],a[href|="/re17"],a[href|="/rabhuh"],a[href|="/f17"],a[href|="/pinkieooh"],a[href|="/rf17"],a[href|="/rpinkieooh"],.side .md table tr:nth-of-type(15) td:nth-of-type(3):after
 {background-position: -100% -700%}
 
 a[href|="/a27"],a[href|="/scootaplease"],a[href|="/ra27"],a[href|="/rscootaplease"],a[href|="/b27"],a[href|="/raritywhine"],a[href|="/rb27"],a[href|="/rraritywhine"],a[href|="/c27"],a[href|="/lunagasp"],a[href|="/rc27"],a[href|="/rlunagasp"],a[href|="/e27"],a[href|="/lily"],a[href|="/re27"],a[href|="/rlily"],.side .md table tr:nth-of-type(15) td:nth-of-type(4):after
@@ -918,6 +920,7 @@ table tr td:first-child
 
 .flair-bergeron {background-position: 0 -2700%}
 .flair-maclove {background-position: -100% -2700%}
+.flair-snack {background-position: -200% -2700%}
 
 /*HOVER FLAIRS! Because yay. Follow same formating to make a new one*/
 
@@ -947,10 +950,10 @@ a.author[href$="BlameTheJungler"], a.author[href$="DaylightDarkle"], a.author[hr
 a.author[href$="BlameTheJungler"]::before {font-size:10px!important; visibility:visible!important; content: "LeafOnTheWind "}
 a.author[href$="DaylightDarkle"]::before {font-size:10px!important; visibility:visible!important; content: "Day1ightDirk1e "}
 a.author[href$="Xeladner"]::before {font-size:10px!important; visibility:visible!important; content: "WAHAHA~ "}
-a.author[href$="theBenger"]::before {font-size:10px!important; visibility:visible!important; content: "theBeenger: I haven't changed this in a while and I feel obligated to so whatevs. "}
+a.author[href$="theBenger"]::before {font-size:10px!important; visibility:visible!important; content: "The Zesty Beenger "}
 a.author[href$="Peacefulzealot"]::before {font-size:10px!important; visibility:visible!important; content: "ZellyBelly "}
 a.author[href$="HeWho_MustNotBeNamed"]::before {font-size:10px!important; visibility:visible!important; content: "HeWho_MustNotBeNamedEh? "}
-a.author[href$="Fuzzy_Gauntlets"]::before {font-size:10px!important; visibility:visible!important; content: "Real_Fake_Fuzzy_Sweetiebelle "}
+a.author[href$="Fuzzy_Gauntlets"]::before {font-size:10px!important; visibility:visible!important; content: "Real_Fake_Fuzzy_Maudaboose "}
 a.author[href$="1125a"]::before {font-size:10px!important; visibility:visible!important; content: "1125au "}
 a.author[href$="shellbullet17"]::before {font-size:10px!important; visibility:visible!important; content: "Delibullet17 "}
 a.author[href$="Not_Actually_French"]::before {font-size:10px!important; visibility:visible!important; content: "Is_Actually_French "}
