--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -3,7 +3,7 @@
 
 /* Changes background  */
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%Explosion%%) fixed no-repeat 66% 100% !important;
+    background:  url(%%stop%%) fixed no-repeat 66% 100% !important;
 }go
 
 
@@ -20,7 +20,7 @@
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%bannercontest55%%) 50% 0px !important;
+   background: url(%%down%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
