--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1,27 +1,5 @@
 /* 
-                                                         ..,i:
-                                                ,YPMOFL;:.    ,YFX5J7:.
-                                            .JGGU:         .5NY.
-                                         :Z8J.           :EU
-                                      ,XGv             .j:
-                                    YBU               ,. 
-                                  JMi                        ..,::::::,, 
-                                :M:                iYYkE8GZNPkSF155FSXNO8MBBBBBMPU7: 
-                 :BBBBBr       57              iLJYi.                           .iYqBBBB5:
-               .BB:   :BBN   .S                                                         i5BB8v 
-              ZB:        EBv..                                                               YBBO,
-             BB            BBL                                                                  :EB8.
-            B5              .BB                                .,::,..                             .PBU 
-           BL                 MB.                             .i;7Yu5q8BBBBO1;.                       :ZP. 
-          BU       .           LB:                                         .rSBBBBBBPY7UXEqku7:.         Yq:
-         8B       qB            7B.                                               :uN2:       :71XqFv:     i5.
-        .B       UB              NB                                                   7GB5           :7Ujr   .r 
-        B7      .B:               BB                                                     :MBk             :77,.:. 
-       .B       BB                :B                                                        rBB:              ::rL
-       BY      .B:                 BB                                                          BB7                v:
-       B       0B                  UB                                                            BB,
-      BB       BB                  .B                                                              BB 
-      Bv       BB                   B.                                                              iB2 
+
       B.       BB                   B.                  .:.                                           BB
      .B        BB ..                BPk0N5Li              ;U,                                          jB
      :B        vB..rLLi             v  .:ru0BBOY.           FM                                          ,B:
@@ -248,7 +226,13 @@ border-top-right-radius: 5px;
 
 #header-img
 { 
- margin:0px 10px -17px 10px;
+ margin:0px 10px -3px 10px;
+}
+
+#header-bottom-left {
+    background-image: url(%%scootawrestle%%);
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
 }
 
 #header-bottom-left{padding-top:10px}
@@ -758,12 +742,12 @@ a[href|="/rswagintosh"],a[href|="/ra24"]
 }
 
 a[href|="/flutterfear"],a[href|="/b00"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rarityyell"],a[href|="/b20"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/eeyup"],a[href|="/bigmac"],a[href|="/b21"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/takealetter"],a[href|="/b22"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/ppshrug"],a[href|="/b03"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/b13"],a[href|="/noooo"],a[href|="/b23"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/fluttershh"],a[href|="/b04"],a[href|="/flutteryay"],a[href|="/b14"],a[href|="/squintyjack"],a[href|="/b24"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/ajugh"],a[href|="/b05"],a[href|="/raritywut"],a[href|="/b15"],a[href|="/dumbfabric"],a[href|="/b25"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/trixiesmug"],a[href|="/b06"],a[href|="/flutterwink"],a[href|="/b16"],a[href|="/rarityannoyed"],a[href|="/b26"],a[href|="/soawesome"],a[href|="/b36"],a[href|="/ajwut"],a[href|="/b07"],a[href|="/twisquint"],a[href|="/b17"],a[href|="/raritywhine"],a[href|="/b27"],a[href|="/rdcool"],a[href|="/b37"],a[href|="/abwut"],a[href|="/b08"],a[href|="/manspike"],a[href|="/b18"],a[href|="/cockatrice"],a[href|="/b28"],a[href|="/facehoof"],a[href|="/b38"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rarityprimp"],a[href|="/b19"],a[href|="/twirage"],a[href|="/b29"],a[href|="/ppseesyou"],a[href|="/b39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-bs%%)!important;
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important;
     cursor: default;
 }
 
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rbigmac"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-bs%%)!important;
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important;
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -799,12 +783,12 @@ a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[hr
     cursor: default;
 }
 
-a[href|="/f00"], a[href|="/pinkiesad"], a[href|="/ppsad"], a[href|="/f01"], a[href|="/diamondtiara"], a[href|="/dt"], a[href|="/f02"], a[href|="/sombra"], a[href|="/f03"], a[href|="/sbshocked"], a[href|="/f04"], a[href|="/guard"], a[href|="/f05"], a[href|="/abstern"], a[href|="/f06"], a[href|="/apathia"], a[href|="/f07"], a[href|="/ajcry"], a[href|="/f08"], a[href|="/rarityeww"], a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"], a[href|="/f10"], a[href|="/starlightrage"], a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"]
+a[href|="/f00"], a[href|="/pinkiesad"], a[href|="/ppsad"], a[href|="/f01"], a[href|="/diamondtiara"], a[href|="/dt"], a[href|="/f02"], a[href|="/sombra"], a[href|="/f03"], a[href|="/sbshocked"], a[href|="/f04"], a[href|="/guard"], a[href|="/f05"], a[href|="/abstern"], a[href|="/f06"], a[href|="/apathia"], a[href|="/f07"], a[href|="/ajcry"], a[href|="/f08"], a[href|="/rarityeww"], a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"], a[href|="/f10"], a[href|="/starlightrage"], a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"], a[href|="/f12"], a[href|="/scootaeww"], a[href|="/f13"], a[href|="/discordgrump"], a[href|="/f14"], a[href|="/troubleshoes"], a[href|="/f15"], a[href|="/rdsnrk"], a[href|="/f16"], a[href|="/thcalm"], a[href|="/thc"], a[href|="/f17"], a[href|="/ooh"], a[href|="/pinkieooh"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%fmotes%%)!important;
     cursor: default;
 }
 
-a[href|="/rf00"], a[href|="/rpinkiesad"], a[href|="/rppsad"], a[href|="/rf01"], a[href|="/rdiamondtiara"], a[href|="/rdt"], a[href|="/rf02"], a[href|="/rsombra"], a[href|="/rf03"], a[href|="/rsbshocked"], a[href|="/rf04"], a[href|="/rguard"], a[href|="/rf05"], a[href|="/rabstern"], a[href|="/rf06"], a[href|="/rf07"], a[href|="/rajcry"], a[href|="/rf08"], a[href|="/rrarityeww"], a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"], a[href|="/rf10"], a[href|="/rstarlightrage"], a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"]
+a[href|="/rf00"], a[href|="/rpinkiesad"], a[href|="/rppsad"], a[href|="/rf01"], a[href|="/rdiamondtiara"], a[href|="/rdt"], a[href|="/rf02"], a[href|="/rsombra"], a[href|="/rf03"], a[href|="/rsbshocked"], a[href|="/rf04"], a[href|="/rguard"], a[href|="/rf05"], a[href|="/rabstern"], a[href|="/rf06"], a[href|="/rf07"], a[href|="/rajcry"], a[href|="/rf08"], a[href|="/rrarityeww"], a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"], a[href|="/rf10"], a[href|="/rstarlightrage"], a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"], a[href|="/rf12"], a[href|="/rscootaeww"], a[href|="/rf13"], a[href|="/rdiscordgrump"], a[href|="/rf14"], a[href|="/rtroubleshoes"], a[href|="/rf15"], a[href|="/rrdsnrk"], a[href|="/rf16"], a[href|="/rthcalm"], a[href|="/rthc"], a[href|="/rf17"], a[href|="/rooh"], a[href|="/rpinkieooh"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%fmotes%%)!important;
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
@@ -905,22 +889,22 @@ a[href|="/priceless"],a[href|="/a10"],a[href|="/rpriceless"],a[href|="/ra10"],a[
 a[href|="/celestiamad"],a[href|="/a11"],a[href|="/rcelestiamad"],a[href|="/ra11"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/twismile"],a[href|="/c11"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/bonbon"],a[href|="/e11"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"],a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"],.flair-rarity,.side .md table tr:nth-of-type(3) td:nth-of-type(3):after
 {background-position:-100% -100%}
 
-a[href|="/lunawait"],a[href|="/a12"],a[href|="/rlunawait"],a[href|="/ra12"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/party"],a[href|="/c12"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/e12"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],.flair-celestia,.side .md table tr:nth-of-type(5) td:nth-of-type(3):after
+a[href|="/lunawait"],a[href|="/a12"],a[href|="/rlunawait"],a[href|="/ra12"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/party"],a[href|="/c12"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/e12"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/f12"], a[href|="/scootaeww"],a[href|="/rf12"], a[href|="/rscootaeww"],.flair-celestia,.side .md table tr:nth-of-type(5) td:nth-of-type(3):after
 {background-position:-100% -200%}
 
-a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/a13"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/ra13"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/b13"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/gross"],a[href|="/c13"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/sbstare"],a[href|="/e13"],a[href|="/rsbstare"],a[href|="/re13"],.flair-bonbon,.side .md table tr:nth-of-type(7) td:nth-of-type(3):after
+a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/a13"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/ra13"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/b13"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/gross"],a[href|="/c13"],a[href|="/rgross"],a[href|="/rc13"],a[href|="/sbstare"],a[href|="/e13"],a[href|="/rsbstare"],a[href|="/re13"],a[href|="/f13"], a[href|="/discordgrump"],a[href|="/rf13"], a[href|="/rdiscordgrump"],.flair-bonbon,.side .md table tr:nth-of-type(7) td:nth-of-type(3):after
 {background-position:-100% -300%}
 
-a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/a14"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/ra14"],a[href|="/flutteryay"],a[href|="/b14"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/hmmm"],a[href|="/c14"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/absmile"],a[href|="/e14"],a[href|="/rabsmile"],a[href|="/re14"],.flair-colgate,.side .md table tr:nth-of-type(9) td:nth-of-type(3):after
+a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/a14"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/ra14"],a[href|="/flutteryay"],a[href|="/b14"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/hmmm"],a[href|="/c14"],a[href|="/rhmmm"],a[href|="/rc14"],a[href|="/absmile"],a[href|="/e14"],a[href|="/rabsmile"],a[href|="/re14"],a[href|="/f14"], a[href|="/troubleshoes"],a[href|="/rf14"], a[href|="/rtroubleshoes"],.flair-colgate,.side .md table tr:nth-of-type(9) td:nth-of-type(3):after
 {background-position:-100% -400%}
 
-a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/a15"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/ra15"],a[href|="/raritywut"],a[href|="/b15"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/fabulous"],a[href|="/c15"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/whooves"],a[href|="/e15"],a[href|="/rwhooves"],a[href|="/re15"],.flair-zecora,.side .md table tr:nth-of-type(11) td:nth-of-type(3):after
+a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/a15"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/ra15"],a[href|="/raritywut"],a[href|="/b15"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/fabulous"],a[href|="/c15"],a[href|="/rfabulous"],a[href|="/rc15"],a[href|="/whooves"],a[href|="/e15"],a[href|="/rwhooves"],a[href|="/re15"],a[href|="/f15"], a[href|="/rdsnrk"],a[href|="/rf15"], a[href|="/rrdsnrk"],.flair-zecora,.side .md table tr:nth-of-type(11) td:nth-of-type(3):after
 {background-position:-100% -500%}
 
-a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/a16"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/ra16"],a[href|="/flutterwink"],a[href|="/b16"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/lunasad"],a[href|="/c16"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/colgate"],a[href|="/minuette"],a[href|="/e16"],a[href|="/rcolgate"],a[href|="/rminuette"],a[href|="/re16"],.flair-redheart,.side .md table tr:nth-of-type(13) td:nth-of-type(3):after
+a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/a16"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/ra16"],a[href|="/flutterwink"],a[href|="/b16"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/lunasad"],a[href|="/c16"],a[href|="/rlunasad"],a[href|="/rc16"],a[href|="/colgate"],a[href|="/minuette"],a[href|="/e16"],a[href|="/rcolgate"],a[href|="/rminuette"],a[href|="/re16"],a[href|="/f16"], a[href|="/thcalm"], a[href|="/thc"], a[href|="/rthc"],a[href|="/rf16"], a[href|="/rthcalm"],.flair-redheart,.side .md table tr:nth-of-type(13) td:nth-of-type(3):after
 {background-position:-100% -600%}
 
-a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/a17"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra17"],a[href|="/twisquint"],a[href|="/b17"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/loveme"],a[href|="/c17"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/abhuh"],a[href|="/e17"],a[href|="/rabhuh"],a[href|="/re17"],.flair-shadowbolts,.side .md table tr:nth-of-type(15) td:nth-of-type(3):after
+a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/a17"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra17"],a[href|="/twisquint"],a[href|="/b17"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/loveme"],a[href|="/c17"],a[href|="/rloveme"],a[href|="/rc17"],a[href|="/abhuh"],a[href|="/e17"],a[href|="/rabhuh"],a[href|="/re17"],a[href|="/f17"], a[href|="/ooh"], a[href|="/pinkieooh"],a[href|="/rf17"], a[href|="/rooh"], a[href|="/rpinkieooh"],.flair-shadowbolts,.side .md table tr:nth-of-type(15) td:nth-of-type(3):after
 {background-position:-100% -700%}
 
 a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/a18"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/ra18"],a[href|="/manspike"],a[href|="/b18"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/celestia"],a[href|="/c18"],a[href|="/rcelestia"],a[href|="/rc18"],a[href|="/spikewtf"],a[href|="/e18"],a[href|="/rspikewtf"],a[href|="/re18"],.flair-davenport,.side .md table tr:nth-of-type(17) td:nth-of-type(3):after
@@ -1103,6 +1087,9 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .flair-treehugger
 {background-position:-300% -2100%}
 
+.flair-pretzel
+{background-position:-300% -2200%}
+
 .flair-cmchaz {background-position: -300% -100%}
 .flair-cmchaz:hover {background-position: -200% -700%}
 .flair-cmclinker {background-position: -300% -100%}
@@ -1126,7 +1113,7 @@ table tr td:first-child {width:14px}
 .side .md table:nth-of-type(1) th:nth-of-type(1):after {content:"a";}
 .side .md table:nth-of-type(1) tr:nth-of-type(odd) td + td:after {background-image:url(%%amotes%%);}
 .side .md table:nth-of-type(2) th:nth-of-type(1):after {content:"b";}
-.side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes-bs%%);}
+.side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes%%);}
 .side .md table:nth-of-type(3) th:nth-of-type(1):after {content:"c";}
 .side .md table:nth-of-type(3) tr:nth-of-type(odd) td + td:after {background-image:url(%%cmotes%%);}
 .side .md table:nth-of-type(4) th:nth-of-type(1):after {content:"e";}
@@ -1438,6 +1425,12 @@ table tr td:first-child {width:14px}
 .side .md table:nth-of-type(5) tr:nth-of-type(20) td:nth-of-type(2):after{content:"flutterkay"}
 .side .md table:nth-of-type(5) tr:nth-of-type(2) td:nth-of-type(3):after{content:"starlightrage"}
 .side .md table:nth-of-type(5) tr:nth-of-type(4) td:nth-of-type(3):after{content:"bulkbiceps"}
+.side .md table:nth-of-type(5) tr:nth-of-type(6) td:nth-of-type(3):after{content:"scootaeww"}
+.side .md table:nth-of-type(5) tr:nth-of-type(8) td:nth-of-type(3):after{content:"discordgrump"}
+.side .md table:nth-of-type(5) tr:nth-of-type(10) td:nth-of-type(3):after{content:"troubleshoes"}
+.side .md table:nth-of-type(5) tr:nth-of-type(12) td:nth-of-type(3):after{content:"rdsnrk"}
+.side .md table:nth-of-type(5) tr:nth-of-type(14) td:nth-of-type(3):after{content:"thcalm"}
+.side .md table:nth-of-type(5) tr:nth-of-type(16) td:nth-of-type(3):after{content:"ooh"}
 body:not(.moderator) div.content .flairselectbtn
 {
  content:""!important;
