--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -563,7 +563,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -1275,3 +1275,4 @@ a[href|="/daringcute"] {width:88px;height:100px;background-position: -90px -325p
 a[href|="/floofdash"] {width:109px;height:150px;background-position: -231px -83px;}
 a[href|="/notenoughbloom"] {width:113px;height:150px;background-position: -340px 0;}
 a[href|="/treehugger"] {width:76px;height:100px;background-position: -90px -425px;}
+a[href|="/seriousapathia"] {width:117px;height:165px;background-position: -340px -150px;}
