--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -189,14 +189,17 @@ body {
   width: 15px;  
 }
 
-.arrow.downmod { 
-  background: url(%%oddballs%%) -634px -210px;
+
+.arrow.down { 
+  background: url(%%oddballs%%) -589px -210px;
   height: 20px; 
   width: 15px;  
 }
 
-.down {
-  display:none
+.arrow.downmod { 
+  background: url(%%oddballs%%) -634px -210px;
+  height: 20px; 
+  width: 15px;  
 }
 
 .arrow.up:hover:before {
@@ -402,7 +405,7 @@ a[href|="/fillytgap"],a[href|="/rdhuh"],a[href|="/snails"],a[href|="/twisad"],a[
   background-image:url(%%emotes%%)!important;
 }
 
-a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"]{
+a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/bulkbiceps"],a[href|="/yeah"],a[href|="/scootaeww"],a[href|="/discordgrump"],a[href|="/troubleshoes"],a[href|="/rdsnrk"],a[href|="/thcalm"],a[href|="/thc"],a[href|="/ooh"],a[href|="/pinkieooh"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/rscootaeww"],a[href|="/rdiscordgrump"],a[href|="/rtroubleshoes"],a[href|="/rrdsnrk"],a[href|="/rthcalm"],a[href|="/rthc"],a[href|="/rooh"],a[href|="/rpinkieooh"]{
   display:block;
   clear:none;
   float:left;
@@ -502,14 +505,20 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-nightglider
 {background-position:0 -2100%}
 
-.flair-surprise
+.flair-troubleshoes
 {background-position:0 -2200%}
 
-.flair-lightning
+.flair-surprise
 {background-position:0 -2300%}
 
-.flair-ariablaze
+.flair-harshwhinny
 {background-position:0 -2400%}
+
+.flair-raindrops
+{background-position:0 -2500%}
+
+.flair-beautybrass
+{background-position:0 -2600%}
 
 a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/starlightrage"],a[href|="/rstarlightrage"],.flair-twilight,a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after {
   background-position:-100% 0;
@@ -519,27 +528,27 @@ a[href|="/celestiamad"],a[href|="/rcelestiamad"],a[href|="/ajsly"],a[href|="/raj
   background-position:-100% -100%;
 }
 
-a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rraritydress"],a[href|="/party"],a[href|="/rparty"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],.flair-celestia,a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],.side .md table tr:nth-of-type(5) td:nth-of-type(2):after {
+a[href|="/lunawait"],a[href|="/rlunawait"],a[href|="/raritydress"],a[href|="/rraritydress"],a[href|="/party"],a[href|="/rparty"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/scootaeww"],a[href|="/rscootaeww"],.flair-celestia,a[href|="/sunsetsosorry"],a[href|="/sssosorry"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],.side .md table tr:nth-of-type(5) td:nth-of-type(2):after {
   background-position:-100% -200%;
 }
 
-a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/gross"],a[href|="/rgross"],a[href|="/sbstare"],a[href|="/rsbstare"],.flair-bonbon,a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],.side .md table tr:nth-of-type(7) td:nth-of-type(2):after {
+a[href|="/ppfear"],a[href|="/pinkiefear"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/gross"],a[href|="/rgross"],a[href|="/sbstare"],a[href|="/rsbstare"],a[href|="/discordgrump"],a[href|="/rdiscordgrump"],.flair-bonbon,a[href|="/sunsetyay"],a[href|="/ssyay"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],.side .md table tr:nth-of-type(7) td:nth-of-type(2):after {
   background-position:-100% -300%;
 }
 
-a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/flutteryay"],a[href|="/rflutteryay"],a[href|="/hmmm"],a[href|="/rhmmm"],a[href|="/absmile"],a[href|="/rabsmile"],.flair-colgate,a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],.side .md table tr:nth-of-type(9) td:nth-of-type(2):after {
+a[href|="/scootacheer"],a[href|="/lootascoo"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/flutteryay"],a[href|="/rflutteryay"],a[href|="/hmmm"],a[href|="/rhmmm"],a[href|="/absmile"],a[href|="/rabsmile"],a[href|="/troubleshoes"],a[href|="/rtroubleshoes"],.flair-colgate,a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],.side .md table tr:nth-of-type(9) td:nth-of-type(2):after {
   background-position:-100% -400%;
 }
 
-a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/raritywut"],a[href|="/rraritywut"],a[href|="/fabulous"],a[href|="/rfabulous"],a[href|="/whooves"],a[href|="/rwhooves"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetwow"],a[href|="/sswow"],.side .md table tr:nth-of-type(11) td:nth-of-type(2):after,.flair-zecora {
+a[href|="/flutterwhoa"],a[href|="/flutterwoah"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/raritywut"],a[href|="/rraritywut"],a[href|="/fabulous"],a[href|="/rfabulous"],a[href|="/whooves"],a[href|="/rwhooves"],a[href|="/rdsnrk"],a[href|="/rrdsnrk"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetwow"],a[href|="/sswow"],.side .md table tr:nth-of-type(11) td:nth-of-type(2):after,.flair-zecora {
   background-position:-100% -500%;
 }
 
-a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/flutterwink"],a[href|="/rflutterwink"],a[href|="/lunasad"],a[href|="/rlunasad"],a[href|="/colgate"],a[href|="/rcolgate"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetquietgame"],a[href|="/ssquietgame"],.side .md table tr:nth-of-type(13) td:nth-of-type(2):after,.flair-redheart {
+a[href|="/ppcute"],a[href|="/cutiepie"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/flutterwink"],a[href|="/rflutterwink"],a[href|="/lunasad"],a[href|="/rlunasad"],a[href|="/colgate"],a[href|="/rcolgate"],a[href|="/thcalm"],a[href|="/rthcalm"],a[href|="/thc"],a[href|="/rthc"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetquietgame"],a[href|="/ssquietgame"],.side .md table tr:nth-of-type(13) td:nth-of-type(2):after,.flair-redheart {
   background-position:-100% -600%;
 }
 
-a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/twisquint"],a[href|="/rtwisquint"],a[href|="/loveme"],a[href|="/rloveme"],a[href|="/abhuh"],a[href|="/rabhuh"],a[href|="/ssleaving"],a[href|="/sunsetleaving"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after,.flair-shadowbolts {
+a[href|="/sbbook"],a[href|="/sweetiebook"],a[href|="/sbook"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/twisquint"],a[href|="/rtwisquint"],a[href|="/loveme"],a[href|="/rloveme"],a[href|="/abhuh"],a[href|="/rabhuh"],a[href|="/ooh"],a[href|="/rooh"],a[href|="/pinkieooh"],a[href|="/rpinkieooh"],a[href|="/ssleaving"],a[href|="/sunsetleaving"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after,.flair-shadowbolts {
   background-position:-100% -700%;
 }
 
@@ -595,14 +604,17 @@ a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[h
 .flair-partyfavor
 {background-position:-100% -2100%}
 
-.flair-snowdrop
+.flair-screwloose
 {background-position:-100% -2200%}
 
-.flair-peachbottom
+.flair-snowdrop
 {background-position:-100% -2300%}
 
-.flair-sonatadusk
+.flair-adagiodazzle
 {background-position:-100% -2400%}
+
+.flair-babsseed
+{background-position:-100% -2500%}
 
 a[href|="/flutterjerk"],a[href|="/rflutterjerk"],a[href|="/rarityyell"],a[href|="/rrarityyell"],a[href|="/rdannoyed"],a[href|="/rrdannoyed"],a[href|="/snails"],a[href|="/rsnails"],.flair-fluttershy,a[href|="/disgustedsunset"],a[href|="/disgustedss"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after {
   background-position:-200% 0;
@@ -684,14 +696,20 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-doublediamond
 {background-position:-200% -2000%}
 
-.flair-troubleshoes
+.flair-discord
 {background-position:-200% -2100%}
 
-.flair-roidrage
+.flair-bulkbiceps
 {background-position:-200% -2200%}
 
-.flair-harshwhinny
+.flair-lightning
 {background-position:-200% -2300%}
+
+.flair-ariablaze
+{background-position:-200% -2400%}
+
+.flair-moondancer
+{background-position:-200% -2500%}
 
 a[href|="/flutterroll"],a[href|="/rflutterroll"],a[href|="/fluttershy"],a[href|="/rfluttershy"],a[href|="/trixiesad"],a[href|="/rtrixiesad"],a[href|="/twisad"],a[href|="/rtwisad"],.flair-applejack,a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after {
   background-position:-300% 0;
@@ -773,11 +791,17 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 .flair-sugarbelle
 {background-position:-300% -2000%}
 
-.flair-discord
-{background-position:-300% -2200%}
+.flair-treehugger
+{background-position:-300% -2100%}
 
-.flair-adagiodazzle
+.flair-peachbottom
 {background-position:-300% -2300%}
+
+.flair-sonatadusk
+{background-position:-300% -2400%}
+
+.flair-fleetfoot
+{background-position:-300% -2500%}
 
 .flair-100-emblem, .flair-100-sunset, .flair-200-emblem, .flair-200-sunset {
   height:42px;
@@ -1544,7 +1568,7 @@ a[href|="/rswagintosh"],
 a[href|="/rflutterfear"],a[href|="/rppboring"],a[href|="/rrarityyell"],a[href|="/rfluttershy"],a[href|="/rajcower"],a[href|="/rajsly"],a[href|="/reeyup"],a[href|="/rrdsmile"],a[href|="/rfluttersrs"],a[href|="/rraritydress"],a[href|="/rtakealetter"],a[href|="/rrdwut"],a[href|="/rppshrug"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rnoooo"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rfluttershh"],a[href|="/rflutteryay"],a[href|="/rsquintyjack"],a[href|="/rspikepushy"],a[href|="/rajugh"],a[href|="/rraritywut"],a[href|="/rdumbfabric"],a[href|="/rraritywhy"],a[href|="/rtrixiesmug"],a[href|="/rflutterwink"],a[href|="/rrarityannoyed"],a[href|="/rsoawesome"],a[href|="/rajwut"],a[href|="/rtwisquint"],a[href|="/rraritywhine"],a[href|="/rrdcool"],a[href|="/rabwut"],a[href|="/rmanspike"],a[href|="/rcockatrice"],a[href|="/rfacehoof"],a[href|="/rrarityjudge"],a[href|="/rrarityprimp"],a[href|="/rtwirage"],a[href|="/rppseesyou"],
 a[href|="/rrdsitting"],a[href|="/rrdhappy"],a[href|="/rrdannoyed"],a[href|="/rtrixiesad"],a[href|="/rtwismug"],a[href|="/rtwismile"],a[href|="/rtwistare"],a[href|="/rchangeling"],a[href|="/rohhi"],a[href|="/rparty"],a[href|="/rhahaha"],a[href|="/rrdscared"],a[href|="/rflutterblush"],a[href|="/rgross"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rajfrown"],a[href|="/rhmmm"],a[href|="/rjoy"],a[href|="/rwhattheflut"],a[href|="/rraritysad"],a[href|="/rfabulous"],a[href|="/rderp"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rlouder"],a[href|="/rlunasad"],a[href|="/rderpyshock"],a[href|="/rpinkamina"],a[href|="/rloveme"],a[href|="/rlunagasp"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rcelestia"],a[href|="/rangel"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rzecora"],a[href|="/rphotofinish"],a[href|="/rppreally"],
 a[href|="/rfillytgap"],a[href|="/rrdhuh"],a[href|="/rsnails"],a[href|="/rtwisad"],a[href|="/rlyra"],a[href|="/rbonbon"],a[href|="/rspitfire"],a[href|="/rcutealoo"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/rsotrue"],a[href|="/rwahaha"],a[href|="/rsbstare"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/rhuhhuh"],a[href|="/rabsmile"],a[href|="/rdealwithit"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/rwhooves"],a[href|="/rrdsalute"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/rcolgate"],a[href|="/rcheerilee"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/rabhuh"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/rtwiponder"],a[href|="/rspikewtf"],a[href|="/rawwyeah"],a[href|="/rgilda"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/rlunamad"],a[href|="/rdiscordsad"],a[href|="/rmaud"],a[href|="/rpinkiepout"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetsneaky"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rscootablue"],a[href|="/rorphan"],a[href|="/rnoparents"],a[href|="/rspikehappy"],
-a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],
+a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],a[href|="/rbulkbiceps"],a[href|="/ryeah"],a[href|="/rscootaeww"],a[href|="/rdiscordgrump"],a[href|="/rtroubleshoes"],a[href|="/rrdsnrk"],a[href|="/rthcalm"],a[href|="/rthc"],a[href|="/rooh"],a[href|="/rpinkieooh"],
 a[href|="/rsmooze"],
 a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],
 a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],
