--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -299,7 +299,7 @@ no-repeat fixed center bottom
 	    
 	    /*1x2 & 1x3*/
 	   	a[href|="/calamitywtf"], a[href|="/lpblush"], a[href|="/lpfillyrear"], a[href|="/lpfrown"], 
-		a[href|="/lpmintals"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/glimmerwinmk"],
+		a[href|="/lpmintals"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/glimmerwink"],
 		a[href|="/bjwat"], a[href|="/lpsmirk"], a[href|="/bjsmirk"], a[href|="/bjsilly"], 
 		a[href|="/pinkeyes"], a[href|="/redeye"], a[href|="/glimmerplotting"], a[href|="/glimmergrin"],
 		a[href|="/lpsmug"], a[href|="/mmdash"]{
@@ -315,7 +315,7 @@ no-repeat fixed center bottom
 		a[href|="/lpmintals"]{ background-position: 0px -440px;}
 		a[href|="/murkybsod"]{ background-position: 0px -550px;}
 		a[href|="/murkyhappy"]{ background-position: 0px -660px;}
-		a[href|="/glimmerwinmk"]{ background-position: 0px -770px;}
+		a[href|="/glimmerwink"]{ background-position: 0px -770px;}
 		a[href|="/bjwat"]{ background-position: 0px -880px;}
 		a[href|="/lpsmirk"]{ background-position: 0px -990px;}
 		a[href|="/bjsmirk"]{ background-position: 0px -1100px;}
