--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -55,7 +55,7 @@
 
 .sidecontentbox .helplink + .title h1 { font-size: 0}
 
-.sidecontentbox .helplink + .title h1:before { font-size: 10pt; content: "CHAOS GUNS" }  
+.sidecontentbox .helplink + .title h1:before { font-size: 10pt; content: "Overpowered OC's" }  
 
 /*END CHANGE NAME OF MODERATORS BOX*/
 
