--- a/source-css/thebelletower.css
+++ b/source-css/thebelletower.css
@@ -892,7 +892,7 @@ a[href="/sniperdash"],
 a[href="/rdlounge"],
 a[href="/rdheythere"],
 a[href="/rdhehhehe"],
-a[href="/applejack"],
+a[href="/rdapplejack"],
 a[href="/rdholdup"],
 a[href="/rdderped"],
 a[href="/rdscrunch"],
@@ -982,7 +982,7 @@ a[href="/rdhehhehe"]{
     height:133px;
     background-position: -280px -420px;
 }
-a[href="/applejack"]{
+a[href="/rdapplejack"]{
     width:140px;
     height:101px;
     background-position: -420px -420px;
@@ -1120,4 +1120,175 @@ a[href="/rdblushsocks"]{
 a[href="/dashiesnowboarding"]{
     width:96px;
     background-position: -490px -560px;
+}
+
+
+a[href="/happydash"],
+a[href="/rdsaywhat"],
+a[href="/rdspooked"],
+a[href="/rdwaiting"],
+a[href="/rdmakingmeblush"],
+a[href="/sleepydash"],
+a[href="/dashiehasanidea"],
+a[href="/sadclouddash"],
+a[href="/dashiewoo"],
+a[href="/takedashiehome"],
+a[href="/rddontcare"],
+a[href="/rdwatching"],
+a[href="/rdshy"],
+a[href="/dashielicking"],
+a[href="/rdhappyhover"],
+a[href="/rdyum"],
+a[href="/rdshysmile"],
+a[href="/grinningdash"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:140px;
+    height:140px;
+    background-image: url(%%rd-ss03%%) !important;
+}
+a[href="/happydash"]{
+    width:109px;
+    height:128px;
+    background-position: 0px 0px;
+}
+a[href="/rdsaywhat"]{
+    height:92px;
+    background-position: -140px 0px;
+}
+a[href="/rdspooked"]{
+    height:106px;
+    background-position: -280px 0px;
+}
+a[href="/rdwaiting"]{
+    width:128px;
+    height:128px;
+    background-position: -420px 0px;
+}
+a[href="/rdmakingmeblush"]{
+    width:128px;
+    background-position: -560px 0px;
+}
+a[href="/sleepydash"]{
+    height:127px;
+    background-position: 0px -140px;
+}
+a[href="/dashiehasanidea"]{
+    width:173px;
+    height:128px;
+    background-position: -140px -140px;
+}
+a[href="/sadclouddash"]{
+    width:210px;
+    height:91px;
+    background-position: -350px -140px;
+}
+a[href="/dashiewoo"]{
+    width:117px;
+    background-position: -560px -140px;
+}
+a[href="/takedashiehome"]{
+    width:280px;
+    height:420px;
+    background-position: 0px -280px;
+}
+a[href="/rddontcare"]{
+    width:210px;
+    height:120px;
+    background-position: -280px -280px;
+}
+a[href="/rdwatching"]{
+    width:166px;
+    height:128px;
+    background-position: -490px -280px;
+}
+a[href="/rdshy"]{
+    width:128px;
+    height:128px;
+    background-position: -280px -420px;
+}
+a[href="/dashielicking"]{
+    width:93px;
+    height:128px;
+    background-position: -420px -420px;
+}
+a[href="/rdhappyhover"]{
+    height:132px;
+    background-position: -560px -420px;
+}
+a[href="/rdyum"]{
+    width:135px;
+    background-position: -280px -560px;
+}
+a[href="/rdshysmile"]{
+    width:128px;
+    height:128px;
+    background-position: -420px -560px;
+}
+a[href="/grinningdash"]{
+    width:109px;
+    background-position: -560px -560px;
+}
+
+
+a[href="/readingbloom"],
+a[href="/sciencebloom"],
+a[href="/abpeak"],
+a[href="/abhiya"],
+a[href="/happybloom2"],
+a[href="/abnotamused"],
+a[href="/abeqarmy"],
+a[href="/pinkiebloomjumprope"],
+a[href="/abbedroom"],
+a[href="/abscarf"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:140px;
+    height:140px;
+    background-image: url(%%ab-ss01%%) !important;
+}
+a[href="/readingbloom"]{
+    height:136px;
+    background-position: 0px 0px;
+}
+a[href="/sciencebloom"]{
+    width:125px;
+    background-position: -140px 0px;
+}
+a[href="/abpeak"]{
+    width:115px;
+    background-position: -280px 0px;
+}
+a[href="/abhiya"]{
+    width:113px;
+    background-position: -420px 0px;
+}
+a[href="/happybloom2"]{
+    width:112px;
+    background-position: -560px 0px;
+}
+a[href="/abnotamused"]{
+    width:115px;
+    height:160px;
+    background-position: 0px -140px;
+}
+a[href="/abeqarmy"]{
+    height:241px;
+    background-position: -140px -140px;
+}
+a[href="/pinkiebloomjumprope"]{
+    width:168px;
+    height:180px;
+    background-position: -280px -140px;
+}
+a[href="/abbedroom"]{
+    width:173px;
+    background-position: -490px -140px;
+}
+a[href="/abscarf"]{
+    width:128px;
+    height:179px;
+    background-position: 0px -350px;
 }
