--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -228,7 +228,7 @@ a[href|="/sp"] {
     height:0px
 }
 
-a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfireagain"], a[href="/sweetieisonfire"], a[href="/sweetiebelleisonfire"], a[href="/bobdudeisonfire"], a[href="/sweetieonfire"]  {
+a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfireagain"], a[href="/sweetieisonfire"], a[href="/sweetiebelleisonfire"], a[href="/bobdudeisonfire"], a[href="/bobdude0isonfire"], a[href="/sweetieonfire"]  {
     background-position: 0px 0px;
     Display: block;
     Clear: none;
