--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -133,8 +133,8 @@ transition: all 3s linear;
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Dreamers"}
-div.titlebox .users-online span.number:after {content:" Want to be the Pet"}
+div.titlebox .subscribers span.number:after {content:" Days Until Next Episode"}
+div.titlebox .users-online span.number:after {content:" Users Weeping"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -229,12 +229,6 @@ border-top-right-radius: 5px;
  margin:0px 10px -3px 10px;
 }
 
-#header-bottom-left {
-    background-image: url(%%scootawrestle%%);
-    background-repeat: no-repeat;
-    background-position: 100% 100%;
-}
-
 #header-bottom-left{padding-top:10px}
 .pagename {font-size:12pt}
 .titlebox form{position: static}
@@ -279,10 +273,10 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%trixie-hat%%);
+ width:70px;
+ height:69px;
+ margin-top:-44px;
  margin-left:10px;
  margin-bottom:0px;
  margin-right:-40px;
