--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -273,11 +273,11 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%trixie-hat%%);
- width:70px;
- height:69px;
- margin-top:-44px;
- margin-left:10px;
+ background:url(%%discentia-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-35px;
+ margin-left:0px;
  margin-bottom:0px;
  margin-right:-40px;
 }
