--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -273,11 +273,11 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
+ background:url(%%pinkie-stache-hat%%);
  width:60px;
  height:60px;
  margin-top:-35px;
- margin-left:0px;
+ margin-left:5px;
  margin-bottom:0px;
  margin-right:-40px;
 }
