--- a/source-css/sombra.css
+++ b/source-css/sombra.css
@@ -612,6 +612,14 @@ width: 156px;
 height: 157px;
 background-image: url(%%sombrasit%%)
 }
+a[href|="/starry"] {
+display: block;
+clear: none;
+float: left;
+width: 158px;
+height: 184px;
+background-image: url(%%pone%%)
+}
 
 /*Vic's emotes*/
 
