--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -177,6 +177,7 @@ a[href$="/spoiler"]:hover {
 .side h6 a {
   color: #74010e !important;
 }
+.side h6 a:last-of-type { color: #0079D3 !important }
 
 body {
   background: url(%%sunsetbg%%) no-repeat fixed center bottom;
