--- a/source-css/thebelletower.css
+++ b/source-css/thebelletower.css
@@ -611,7 +611,7 @@ a[href="/confidentscoots"],
 a[href="/scootacomfy"],
 a[href="/scootahey"],
 a[href="/masterofdrums"],
-a[href="/drepressedscoots"],
+a[href="/depressedscoots"],
 a[href="/scootasurprised"],
 a[href="/scootadashlove"],
 a[href="/fillyhoofbump"],
@@ -658,7 +658,7 @@ a[href="/masterofdrums"]{
     height:140px;
     background-position: -420px 0px;
 }
-a[href="/drepressedscoots"]{
+a[href="/depressedscoots"]{
     width:140px;
     height:80px;
     background-position: -560px 0px;
