--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -563,7 +563,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -1277,3 +1277,4 @@ a[href|="/notenoughbloom"] {width:113px;height:150px;background-position: -340px
 a[href|="/treehugger"] {width:76px;height:100px;background-position: -90px -425px;}
 a[href|="/seriousapathia"] {width:117px;height:165px;background-position: -340px -150px;}
 a[href|="/scrunchgate"] {width:82px;height:100px;background-position: 0 -470px;}
+a[href|="/rubyjuice"] {width:57px;height:100px;background-position: 0 -570px;}
